--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "typescript",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {}
+  "devDependencies": {
+    "@types/node": "^18.11.8",
+    "vite": "^3.2.1"
+  }
 }
