--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "typescript",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
     "@types/node": "^18.11.8",
     "vite": "^3.2.1"
